# ModbusOpcUaServer

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/config/: Cargo.toml
crates/config/examples/: sample-config.json
crates/config/src/: lib.rs  migrate.rs  resolve.rs  validate.rs
crates/config/src/schema/: mod.rs  v1.rs
crates/config/tests/: sample.rs
crates/diag-log/: Cargo.toml
crates/diag-log/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  history.rs  main.rs  server.rs  testpoll.rs
crates/gui/tests/: roundtrip.rs
crates/mb-poller/: Cargo.toml
crates/mb-poller/examples/: e2e_demo.rs
crates/mb-poller/src/: cache.rs  channel.rs  coalesce.rs  command.rs  device.rs  lib.rs  metrics.rs  plan.rs  schedule.rs
crates/mb-poller/tests/: de_coalesce_e2e.rs  e2e.rs  e2e_tcp.rs  half_duplex_e2e.rs  load.rs
crates/mb-poller/testsupport/: sim.rs
crates/mb-proto/: Cargo.toml
crates/mb-proto/examples/: tcp_read_prototype.rs
crates/mb-proto/src/: connect.rs  error.rs  lib.rs  request.rs  traffic.rs  transport.rs
crates/mb-proto/tests/: rtu_over_tcp_integration.rs  tcp_integration.rs
crates/mb-types/: Cargo.toml
crates/mb-types/src/: datatype.rs  function.rs  ids.rs  lib.rs
crates/mqtt-publisher/: Cargo.toml
crates/mqtt-publisher/src/: lib.rs
crates/opcua-gateway/: Cargo.toml  server.conf
crates/opcua-gateway/examples/: hello_client.rs  hello_server.rs
crates/opcua-gateway/src/: auth.rs  lib.rs  write.rs
crates/opcua-gateway/tests/: opcua_advertised.rs  opcua_auth.rs  opcua_e2e.rs
crates/svc-host/: Cargo.toml
crates/svc-host/src/: lib.rs  stack.rs  windows.rs
crates/tags-core/: Cargo.toml
crates/tags-core/src/: decode.rs  engine.rs  formula.rs  lib.rs  persist.rs  store.rs  value.rs
crates/tags-core/tests/: full_chain.rs
data/tags.sled/: db  snap.000000000005177B
docs/: phase1-design.md  phase2-progress.md  phase3-progress.md  phase4-progress.md  phase5-progress.md  phase6-progress.md  phase7-progress.md
docs/reviews/: phase1-findings.md  phase1-fix-progress.md  user-feedback-2026-07-07.md
installers/: README.md
installers/linux/: build-in-docker.sh  cross-build-arm64.sh  opc-modbus-server.service  pack-only.sh
installers/windows/: bootstrap.rs  install.cmd  install.ps1  main.wxs  uninstall.ps1
pki/own/: cert.der
pki/private/: private.pem
scripts/: pack-win.ps1
