[package]
name = "diag-log"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gateway-config = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
