[package]
name = "mb-poller"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
mb-types = { workspace = true }
gateway-config = { workspace = true }
mb-proto = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
# tcp-server / rtu-over-tcp-server: test-only — the end-to-end tests run
# in-process tokio-modbus servers that dispatch on unit id via `SlaveRequest`
# (the half-duplex e2e additionally needs the RTU-over-TCP server skeleton).
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp-server", "rtu-over-tcp-server"] }
