[package]
name = "tags-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
mb-types = { workspace = true }
gateway-config = { workspace = true }
mb-poller = { path = "../mb-poller" }
tokio = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
evalexpr = "11"
sled = "0.34"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp", "tcp-server"] }
